fix(QT): fallback Loader center alignment

--- a/packages/ui/src/ui/pages/navigation/content/Table/TableOverview/CreateQueryFromTable.scss
+++ b/packages/ui/src/ui/pages/navigation/content/Table/TableOverview/CreateQueryFromTable.scss
@@ -4,4 +4,9 @@
     &__btn + &__btn {
         margin-left: 1px;
     }
+
+    &__loader {
+        flex: 1 1 100%;
+        justify-content: center;
+    }
 }
