--- a/packages/ui/src/ui/pages/query-tracker/QueryTracker/QueryTracker.scss
+++ b/packages/ui/src/ui/pages/query-tracker/QueryTracker/QueryTracker.scss
@@ -1,9 +1,16 @@
-.query-tracker-page-container {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-    overflow: visible;
-    z-index: var(--query-editor-container-z-index);
+.query-tracker-page {
+    &__container {
+        position: absolute;
+        height: 100%;
+        width: 100%;
+        top: 0;
+        left: 0;
+        overflow: visible;
+        z-index: var(--query-editor-container-z-index);
+    }
+
+    &__loader {
+        flex: 1 1 100%;
+        justify-content: center;
+    }
 }
